--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@vue/compiler-sfc": "^3.2.47",
     "rollup": "^2.79.2",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
     "vue": "^3.2.47"
