--- a/package.json
+++ b/package.json
@@ -33,21 +33,18 @@
   "dependencies": {
     "qrcode": "^1.5.4"
   },
-  "peerDependencies": {
-    "vue": "^3.2.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^16.0.0",
-    "@vue/compiler-sfc": "^3.2.47",
     "rollup": "^2.79.2",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0",
-    "vue": "^3.2.47"
+    "rollup-plugin-vue": "^5.1.9",
+    "vue": "^2.7.16",
+    "vue-template-compiler": "^2.7.16"
   },
   "browserslist": [
     "> 1%",
