--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "description": "Componente Vue para generar vCards con soporte para códigos QR y NFC",
   "main": "dist/vue-vcard-generator.umd.js",
-  "module": "dist/vue-vcard-generator.esm.js",
+  "module": "dist/vue-vcard-generator.es.js",
   "files": [
     "dist",
     "src"
   ],
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "build": "vite build",
+    "dev": "vite build --watch",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
@@ -33,18 +33,13 @@
   "dependencies": {
     "qrcode": "^1.5.4"
   },
+  "peerDependencies": {
+    "vue": "^3.2.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.26.9",
-    "@babel/preset-env": "^7.26.9",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^28.0.2",
-    "@rollup/plugin-node-resolve": "^16.0.0",
-    "rollup": "^2.79.2",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^5.1.9",
-    "vue": "^2.7.16",
-    "vue-template-compiler": "^2.7.16"
+    "@vitejs/plugin-vue": "^5.2.1",
+    "vite": "^5.4.14",
+    "vue": "^3.3.0"
   },
   "browserslist": [
     "> 1%",
